[workspace]
resolver = "2"

members = [
    "app", "wasm",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"


[workspace.dependencies]
gstd = "=1.6.2"
gtest = "=1.6.2"
gclient = "=1.6.2"
gear-core = "=1.6.2"
gwasm-builder = { package = "gear-wasm-builder", version = "=1.6.2" }
parity-scale-codec = { version = "3.6", default-features = false }
sails-idl-gen = "=0.6.1"
sails-client-gen = "=0.6.1"
sails-rs = "=0.6.1"
scale-info = { version = "2.10", default-features = false }
primitive-types = { version = "*", default-features = false }
derive-more = { version = "*", default-features = false, features = ["display"] }
log = "*"
env_logger = "*"
serde = "1.0"
serde-json = { package = "serde_json", version = "1.0" }
syn = "2.0"
thiserror = "1.0"
tokio = "1.36"
trybuild = "1"
vft-service = { git = "https://github.com/gear-foundation/standards" }
