[workspace]

members = ["client"]


[package]
name = "vstreet"
version = "0.1.0"
edition = "2021"

[dependencies]
vstreet-app = { path = "app" }
parity-scale-codec = { version = "3.6", default-features = false }
scale-info = { version = "2.10", default-features = false }

[build-dependencies]
vstreet-app = { path = "app" }
sails-rs = { version = "0.6.1", features = ["wasm-builder"] }
sails-idl-gen = "0.6.1"
parity-scale-codec = { version = "3.6", default-features = false }
scale-info = { version = "2.10", default-features = false }


[dev-dependencies]
vstreet = { path = ".", features = ["wasm-binary"] }
vstreet-client = { path = "client" }
sails-rs = { version = "0.6.1", features = ["gtest"] }
tokio = { version = "1.40", features = ["rt", "macros"] }
parity-scale-codec = { version = "3.6", default-features = false }
scale-info = { version = "2.10", default-features = false }

[features]
wasm-binary = []
