[package]
name = "vstreet-app"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
gstd.workspace = true
extended-vft-client.workspace = true
sails-rs.workspace = true
session-service.workspace = true
parity-scale-codec.workspace = true
scale-info.workspace = true

[features]
wasm-binary = []
